<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ECXTrack Mobile</string>
    <string name="title_activity_main">Principal</string>
    <string name="login_checkbox">Salvar Usuário e Senha</string>
    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Fechar Menu</string>
    <string name="action_settings">Configurações</string>
    <string name="action_maptype">Tipo de Mapa</string>
    <string name="action_find">Rota Até o Carro</string>
    <string name="action_refresh">Atualizar</string>
    <string name="action_anchor">Âncora</string>
    <string name="action_help">Ajuda</string>
    <string name="action_feedback">Fale Conosco</string>
    <string name="action_route">Trajetos</string>
    <string name="action_logout">Sair</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_loading">LoadingAct</string>
    <string name="app_loading">Carregando…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_exit_list">Deseja sair da tela do mapa ?</string>
    <string name="expired_session">Sua seção expirou, você será redirecionado a tela de login</string>

</resources>
